--- a/main.css
+++ b/main.css
@@ -167,7 +167,7 @@ article p{
   color:#FFFFFF;
 }
 form {
-  background-color:#FFA500;
+  background-color:#0000b0;
   width:90%;
   margin:auto;
   color:white;
