--- a/main.css
+++ b/main.css
@@ -11,7 +11,30 @@ body {
 header, nav, main, footer, aside, article{
    border-radius:5px;
 }
-
+@keyframes logo {
+  0% {
+    opacity:0;
+    transform:translatey(-1em);
+  }
+  100% {
+    opacity:1;
+    transform:translatey(0);
+  }
+}
+@keyframes words{
+  0%{
+    opacity:0;
+    transform:translatex(1em);
+  }
+  50%{
+    opacity:.5;
+    transform:translateY(.1em);
+  }
+  100%{
+    opacity:1;
+    transform:translatex(0);
+  }
+}
 header {
     grid-area:header;
     background:#ab231b;
@@ -21,6 +44,7 @@ header {
   grid-area:headerpic;
   padding:5px;
   height: 10vmax;
+  animation: logo .5s;
 }
 .headertext{
 grid-area:headertext;
@@ -40,12 +64,14 @@ header h1 {
      font-family:Impact;
      text-shadow: 2px 2px 5px #3217ff;
      margin: 0;
+     animation: words 1.5s;
 }
 
 header h3 {
     font-size:3vw;
     color:#ffffff;
     margin:0;
+    animation: words 2s;
 }
 nav {
     grid-area: nav;
