--- a/main.css
+++ b/main.css
@@ -171,6 +171,10 @@ figure img {
   margin-top:16px;
   max-width:20em;
   border: 2px solid #0000b0;
+  transition: all.5s ease-in-out;
+}
+figure img:hover{
+  transform: scale(1.1);
 }
 .fig1 {
   grid-area:fig1;
